:sparkles: log analysis with graylog

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -2,4 +2,4 @@ spring.datasource.url=# prod config will be injected here #
 spring.datasource.username=# prod config will be injected here #
 spring.datasource.password=# prod config will be injected here #
 
-logging.level.org.springframework=ERROR
+logging.level.org.springframework=WARN
