--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-logging.level.net.ttddyy.dsproxy.listener=debug
+logging.level.net.ttddyy.dsproxy.listener=DEBUG
